<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="b07.flightbooking.Display_Client_Info"

    tools:ignore="RtlHardcoded" >



    <TextView

        android:id="@+id/client_info"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"

        android:layout_alignTop="@+id/logout_button"

        android:alpha="2"

        android:text="@string/client_info" 

        android:textSize="20sp"

        android:textStyle="bold"

        android:textColor="#000000" />



    <TextView

        android:id="@+id/firstName"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/lastName"

        android:layout_below="@+id/lastName"

        android:layout_marginTop="30dp"

        android:text="@string/first_name" 

        android:textSize="15sp"

        android:textStyle="bold"

        android:textColor="#000000" />



    <TextView

        android:id="@+id/email"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_below="@+id/firstName"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="28dp"

        android:text="@string/email"

        android:textColor="#000000"

        android:textSize="15sp"

        android:textStyle="bold" />



    <TextView

        android:id="@+id/lastName"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_below="@+id/logout_button"

        android:layout_centerHorizontal="true"

        android:text="@string/last_name"

        android:textColor="#000000"

        android:textSize="15sp"

        android:textStyle="bold" />



    <TextView

        android:id="@+id/address"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_below="@+id/email"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="32dp"

        android:text="@string/address"

        android:textColor="#000000"

        android:textSize="15sp"

        android:textStyle="bold" />



    <TextView

        android:id="@+id/expiryDate"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_alignRight="@+id/firstName"

        android:layout_below="@+id/creditCard"

        android:layout_marginTop="34dp"

        android:text="@string/expiry_date"

        android:textColor="#000000"

        android:textSize="15sp"

        android:textStyle="bold" />



    <Button

        android:id="@+id/edit_client"

        style="?android:attr/buttonStyleSmall"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_alignBaseline="@+id/logout_button"

        android:layout_alignBottom="@+id/logout_button"

        android:layout_toRightOf="@+id/client_info"

        android:onClick="edit_personal_info"

        android:text="@string/edit_personal_info"

        android:textColor="#000000"

        android:textSize="15sp"

        android:textStyle="bold" />



    <TextView

        android:id="@+id/creditCard"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_below="@+id/address"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="25dp"

        android:text="@string/credit_card_info"

        android:textColor="#000000"

        android:textSize="15sp"

        android:textStyle="bold" />



    <Button

        android:id="@+id/logout_button"

        style="?android:attr/buttonStyleSmall"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"

        android:layout_marginTop="17dp"

        android:layout_toRightOf="@+id/creditCard"

        android:onClick="logout"

        android:text="@string/logout" />



    <Button

        android:id="@+id/back"

        style="?android:attr/buttonStyleSmall"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"

        android:layout_alignRight="@+id/expiryDate"

        android:layout_marginBottom="46dp"

        android:onClick="back"

        android:text="@string/back"

        android:textColor="#000000"

        android:textSize="15sp"

        android:textStyle="bold" />



</RelativeLayout>