<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="b07.flightbooking.EditClientInfo" >

 <Button
        android:id="@+id/logout"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/loggedInUser"
        android:onClick="logout"
        android:text="@string/logout" />
 
 
	
	<TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_name"
        android:layout_below="@+id/last_name"
        android:layout_marginTop="30dp"
        android:text="@string/first_name" 
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/address"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/expiry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/first_name"
        android:layout_below="@+id/credit_card_info"
        android:layout_marginTop="35dp"
        android:text="@string/expiry_date"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />
    

    

        
    <TextView
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button1"
        android:layout_centerHorizontal="true"
        android:alpha="2"
        android:text="@string/edit_client_info"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/credit_card_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/credit_card_info"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />
    
       <Button
        android:id="@+id/back"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:onClick="back"
        android:text="@string/back"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />

       <TextView
           android:id="@+id/last_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/back"
           android:layout_centerHorizontal="true"
           android:text="@string/last_name"
           android:textColor="#000000"
           android:textSize="15sp"
           android:textStyle="bold" />

       <EditText
           android:id="@+id/edit_last_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/first_name"
           android:layout_below="@+id/last_name"
           android:ems="5"
           android:hint="@string/last_name"
           android:inputType="textEmailAddress"
           android:textSize="14sp" />

       <EditText
           android:id="@+id/edit_first_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/first_name"
           android:layout_below="@+id/first_name"
           android:ems="5"
           android:hint="@string/first_name"
           android:inputType="textEmailAddress"
           android:textSize="14sp" />

</RelativeLayout>
