<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="b07.flightbooking.ClientHomePage" >

    <TextView
        android:id="@+id/loggedInUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/loggedInUser"
        android:onClick="logout"
        android:text="@string/logout" />

    <Button
        android:id="@+id/EditPersonalInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ViewPersonalInfo"
        android:layout_alignRight="@+id/ViewPersonalInfo"
        android:layout_below="@+id/ViewPersonalInfo"
        android:onClick="editPersonalInfo"
        android:text="@string/edit_personal_info" />

    <Button
        android:id="@+id/SearchFlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditPersonalInfo"
        android:layout_alignRight="@+id/EditPersonalInfo"
        android:layout_below="@+id/EditPersonalInfo"
        android:onClick="search"
        android:text="@string/search_flight" />

    <Button
        android:id="@+id/ViewPersonalInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:onClick="showPersonalInfo"
        android:text="@string/view_personal_info" />

    <Button
        android:id="@+id/SearchIti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SearchFlight"
        android:layout_alignRight="@+id/SearchFlight"
        android:layout_below="@+id/SearchFlight"
        android:text="@string/search_iti" />

</RelativeLayout>
