<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   	android:background="@drawable/download"
    tools:context="b07.flightbooking.MainActivity" >
    
     <TextView
        android:id="@+id/loginError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"/>
     
     <TextView
        android:id="@+id/loggedInUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1" />

     <EditText
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/username"
         android:layout_below="@+id/username"
         android:ems="10"
         android:hint="@string/password"
         android:gravity="center"
         android:inputType="textPassword" />

     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/password"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="130dp"
         android:text="@string/submit"
         android:alpha="0.85"
         android:textStyle="bold" />

     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:gravity="center_horizontal"
         android:text="@string/welcome"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#000000" />

     <EditText
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
         android:ems="10"
         android:gravity="center"
         android:hint="@string/username"
         android:inputType="textEmailAddress" />

</RelativeLayout>

